Thu Sep 17 21:50:35 GMT 2015  Olly Betts <olly@survex.com>

	* lib/id.po: Update Indonesian translation.

Tue Sep 15 20:57:58 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Look for wx-config-3.0, which Fedora's wx3 packages
	  have.  Reported by James Begley.

Tue Sep 15 07:26:53 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Fix the cavern log under WXMSW.  Reported by Brian
	  Clipstone.

Tue Sep 15 06:57:00 GMT 2015  Olly Betts <olly@survex.com>

	* lib/sk.po: Translate "Help".

Wed Sep 09 07:16:51 GMT 2015  Olly Betts <olly@survex.com>

	* src/mainfrm.cc: Fix handling of encoding of filename when there's no
	  corresponding locale on the system.

Wed Sep 09 07:08:04 GMT 2015  Olly Betts <olly@survex.com>

	* buildmacosx.sh: Fix locations proj 'epsg' and 'esri' files get
	  installed to (script version used to build 1.2.23).

Sun Sep 06 04:25:13 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Fix compiler warnings.

Sun Sep 06 03:50:08 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,doc/HACKING.htm: Now using InnoSetup 5.5.6 rather than 5.5.3.

Sun Sep 06 03:23:47 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml: Improve wording.

Sun Sep 06 03:23:30 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac,doc/manual.sgml: Update for 1.2.23.

Sun Sep 06 03:18:12 GMT 2015  Olly Betts <olly@survex.com>

	* lib/fr.po: Fill in missing translations.

Sun Sep 06 00:03:38 GMT 2015  Olly Betts <olly@survex.com>

	* buildmacosx.sh: Building libav with --disable-decoders
	  --disable-demuxers causes a link failure when linking aven, so drop
	  those options for now.

Tue Sep 01 08:49:59 GMT 2015  Olly Betts <olly@survex.com>

	* Makefile.am,src/Makefile.am,src/aven.cc,src/message.c: Fix up the
	  handling of bundled epsg and esri files to work.

Tue Sep 01 08:32:34 GMT 2015  Olly Betts <olly@survex.com>

	* tests/cmd_export_bad.out,tests/cmd_export_bad.svx: Add more new files
	  missed from earlier commit.
