@@ -61,7 +61,6 @@ public:
     void OnSelChanged(wxTreeEvent& event);
     void OnKeyPress(wxKeyEvent &e);
     void OnItemActivated(wxTreeEvent& e);
-    void OnRightClick(wxTreeEvent& e);
 
     bool GetSelectionData(wxTreeItemData**) const;
 
